--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     color:hsl(0, 0%, 100%);
-    background-color: rgb(0, 0, 0);
+    background-color: rgb(0, 2, 2);
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
@@ -12,19 +12,16 @@ ul {
     padding: 16px;
 }
 a {
-    color: rgb(255, 255, 255);
+    color: wheat;
     text-decoration: none;
 }
+    h1 {
+        color:hsl(119, 93%, 35%);
+    }
 img{
-    width: 200px;
-    height: 200px;
+    width: 400px;
+    height: 400px;
     border-radius: 50%;
     border: 5px solid hsl(119, 93%, 35%);
 }
 
-.center {
-    text-align: center;
-    }
-    h1 {
-        color:hsl(119, 93%, 35%);
-    }
